[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-temp-env"
version = "0.1.7"
description = "Temporarily set, override, or remove environment variables with a context manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["environment", "env", "testing", "context-manager", "temporary"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-temp-env#readme"
Repository = "https://github.com/philiprehberger/py-temp-env"
Issues = "https://github.com/philiprehberger/py-temp-env/issues"
Changelog = "https://github.com/philiprehberger/py-temp-env/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_temp_env"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
